# ROS2_Robotino-release

./: .gitignore  .gitmodules  README.md  install.sh  requirements.txt  run.sh  run.zsh
src/: requirements.txt
src/robotino_ros2/: .gitignore  config.cfg  package.xml  setup.cfg  setup.py
src/robotino_ros2/config/: camera_param.yaml  ekf.yaml  lidar_config.yaml  slam_config.yaml
src/robotino_ros2/launch/: power.launch.py  robotino.launch.py  robotino_local.launch.py  robotino_remote.launch.py  robotino_slam.launch.py
src/robotino_ros2/robotino_ros2/: camera_node.py  config.py  controller_node.py  http_test.py  io_node.py  lidar_node.py  omnidrive_node.py  power_node.py  robotino_node.py  service_node.py  test.py
src/robotino_ros2/robotino_ros2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/robotino_ros2/urdf/: robotino.urdf
src/robotino_ros2_client/: .gitignore  package.xml  setup.cfg  setup.py
src/robotino_ros2_client/robotino_ros2_client/: power_node_client.py  sample_client.py
src/robotino_ros2_msg/: CMakeLists.txt  package.xml
src/robotino_ros2_msg/msg/: AnalogReadings.msg  BHAReadings.msg  DigitalReadings.msg  DistanceArray.msg  EncoderReadings.msg  GrapplerReadings.msg  GripperState.msg  Image.msg  LaserScan.msg  MotorReadings.msg  NorthStarReadings.msg  Omnidrive.msg  OutputControl.msg  OutputControlArray.msg  PowerReadings.msg  Service.msg  ServiceGroup.msg  SetGrapplerAxes.msg  SetGrapplerAxis.msg
src/robotino_ros2_msg/srv/: Charger.srv  ControllerInfo.srv  IOStatus.srv  PowerManagement.srv  Services.srv
